--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
 
-       Copyright 2009-2023 the original author or authors.
-
-       Licensed under the Apache License, Version 2.0 (the "License");
-       you may not use this file except in compliance with the License.
-       You may obtain a copy of the License at
-
-          https://www.apache.org/licenses/LICENSE-2.0
-
-       Unless required by applicable law or agreed to in writing, software
-       distributed under the License is distributed on an "AS IS" BASIS,
-       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-       See the License for the specific language governing permissions and
-       limitations under the License.
-
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -27,10 +11,10 @@
   </parent>
 
   <groupId>org.mybatis</groupId>
-  <artifactId>mybatis</artifactId>
-  <version>3.5.15-SNAPSHOT</version>
+  <artifactId>mybatis-n</artifactId>
+  <version>3.5.15.1-SNAPSHOT</version>
 
-  <name>mybatis</name>
+  <name>mybatis-n</name>
   <description>
     The MyBatis SQL mapper framework makes it easier to use a relational database with object-oriented
     applications. MyBatis couples objects with stored procedures or SQL statements using a XML descriptor or
@@ -114,23 +98,20 @@
     <developerConnection>scm:git:ssh://git@github.com/mybatis/mybatis-3.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-  <issueManagement>
-    <system>GitHub Issue Management</system>
-    <url>https://github.com/mybatis/mybatis-3/issues</url>
-  </issueManagement>
-  <ciManagement>
-    <system>Github</system>
-    <url>https://github.com/mybatis/mybatis-3/actions</url>
-  </ciManagement>
   <distributionManagement>
-    <site>
-      <id>gh-pages-scm</id>
-      <name>Mybatis GitHub Pages</name>
-      <url>scm:git:ssh://git@github.com/mybatis/mybatis-3.git</url>
-    </site>
+<!--    <repository>
+      <id>rdc-releases</id>
+      <url>https://packages.aliyun.com/maven/repository/2290302-release-ou3VTD</url>
+    </repository>-->
+    <snapshotRepository>
+      <id>rdc-snapshots</id>
+      <url>https://packages.aliyun.com/maven/repository/2290302-snapshot-SmWcL1</url>
+    </snapshotRepository>
   </distributionManagement>
 
   <properties>
+    <maven.min-version>3.9.2</maven.min-version>
+
     <clirr.comparisonVersion>3.4.6</clirr.comparisonVersion>
     <derby.version>10.17.1.0</derby.version>
     <log4j.version>2.21.1</log4j.version>
@@ -315,12 +296,12 @@
       <scope>test</scope>
     </dependency>
     <!-- For javadoc link -->
-    <dependency>
+<!--    <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
       <version>${mssql-jdbc.version}</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
@@ -480,12 +461,13 @@
       </properties>
     </profile>
     <profile>
-      <id>19</id>
+      <id>21</id>
       <activation>
-        <jdk>[19,)</jdk>
+        <jdk>[21,)</jdk>
       </activation>
       <properties>
           <derby.version>10.17.1.0</derby.version>
+        <mssql-jdbc.version>12.5.0.jre11-preview</mssql-jdbc.version>
       </properties>
     </profile>
   </profiles>
